--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>❤ Erdem's Personal Site❤</title>
+    <title>⚒ Erdem's Personal Site⚒</title>
   </head>
   <body>
     <table cellspacing ="20">
